ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.news-fusion.ru
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend-svc
                port:
                  number: 80
    - host: news-fusion.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80

tls:
  - hosts:
    - api.news-fusion.ru
    - news-fusion.ru
    secretName: news-fusion-tls
